# naive-fin-data

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: daily-fetch.yml  deploy-pages.yml
apps/web/: README.md  package-lock.json  package.json
apps/web/src/: main.tsx
apps/web/src/app/: router.tsx
data/stock/cn/: code.jsonl
data/stock/cn/000001/: status.json
data/stock/cn/000002/: status.json
data/stock/cn/000725/: status.json
data/stock/hk/: code.jsonl
data/stock/hk/00001/: status.json
data/stock/hk/00002/: status.json
data/stock/hk/00700/: status.json
docs/: app.js  index.html  status-data.json  styles.css
scripts/: build_status_page_data.py  run_backtest_s1.ps1  run_trader_incubator_demo.py
src/naive_fin_data/: __init__.py  cli.py  fetcher.py
src/trader_incubator/: __init__.py  backtest.py  cli.py  exchange.py  live.py  models.py  orchestrator.py  program_api.py  season.py  skill_runtime.py  trader.py  world.py
src/trader_incubator/core/: __init__.py  backtest.py  exchange.py  live.py  orchestrator.py  persistence.py  season.py  server.py  trader.py  trader_research.py
src/trader_incubator/docs/: design.md  epic.md  requirement_v2.md  task_breakdown_v2.md  world_framework.md
src/trader_incubator/examples/: __init__.py  demo_program.py
src/trader_incubator/scripts/: run_backtest_s1.ps1
src/trader_incubator/tests/: conftest.py  test_backtest.py  test_fetcher.py  test_live_engine.py  test_trader_incubator_exchange.py
tests/: test_backtest.py  test_fetcher.py  test_integration.py  test_live_engine.py  test_status.py  test_trader_incubator_exchange.py
(+732 files in other folders)
