[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naive-fin-data"
version = "0.1.0"
description = "Naive financial data fetching with AkShare Eastmoney APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.14.90",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "yfinance>=0.2.54",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that call real AkShare APIs",
]
