[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "naive-fin-data"
version = "0.1.0"
description = "Naive financial data fetching with AkShare Eastmoney APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.14.90",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
trader-incubator = [
  "deerflow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = {where = ["src"], include = ["naive_fin_data*"]}

[tool.pytest.ini_options]
testpaths = ["src/trader_incubator/tests"]
addopts = "--basetemp=.tmp/pytest/basetemp --ignore=src/trader_incubator/apps"
cache_dir = ".tmp/pytest/cache"
markers = [
  "integration: tests that call real AkShare APIs",
]

[tool.ruff]
exclude = ["src/trader_incubator/apps/*/node_modules"]

[tool.mypy]
exclude = ["src/trader_incubator/apps/.*/node_modules"]
